@@ -1,8 +1,3 @@
-plugins {
-    id 'org.springframework.boot' version '2.1.4.RELEASE'
-    id 'java'
-}
-
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
@@ -27,6 +22,11 @@ tasks.withType(JavaCompile).each {
 }
 
 test {
+    jvmArgs(['--enable-preview'])
+}
+
+bootRun {
+    main = 'com.genius.primavera.PrimaveraApplication'
     jvmArgs(['--enable-preview'])
 }
 
